添加Claude API Key的配置示例

--- a/config/secrets.json.example
+++ b/config/secrets.json.example
@@ -9,5 +9,8 @@
         "endpoint": "YOUR_TOS_ENDPOINT",
         "region": "YOUR_TOS_REGION",
         "bucket": "YOUR_TOS_BUCKET"
+    },
+    "claude": {
+        "api_key": "YOUR_CLAUDE_API_KEY"
     }
 }
